# knossos

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTION.md  README.md  build.sh  default_bus_layout.tres  export_presets.cfg  icon.svg.import  macos.entitlements  project.godot
.codex/: config.toml
avatars/: avatar_1.tscn  avatar_1.vrwml  avatar_1.vrwml.import  avatar_2.manifest.json  avatar_2.tscn  avatar_2.vrwml  avatar_2.vrwml.import
config/: build.example.cfg  build_config.gd  build_config.gd.uid
conformance/: README.md  compatibility-report.json  run.py
native/vrweb_wasm_runtime/: Cargo.toml  LICENSES.md  build_runtime.sh  runtime-build.json  vrweb_wasm_runtime.gdextension.template
native/vrweb_wasm_runtime/fixtures/: answer.wasm  answer.wat  host_call_flood.wasm  host_call_flood.wat  infinite_loop.wasm  infinite_loop.wat  invalid.wasm  lifecycle.wasm  lifecycle.wat  lifecycle_trap_create.wasm  lifecycle_trap_create.wat  lifecycle_trap_event_unmount.wasm  lifecycle_trap_event_unmount.wat  lifecycle_trap_mount.wasm  lifecycle_trap_mount.wat  memory_grow.wasm  memory_grow.wat  portable_services.wasm  portable_services.wat  scene_import_incompatible_major.wasm  scene_import_incompatible_major.wat  scene_import_unavailable.wasm  scene_import_unavailable.wat  scene_lifecycle.wasm  scene_lifecycle.wat  table_grow.wasm  table_grow.wat  trap.wasm  trap.wat  unknown_import.wasm  unknown_import.wat  vrweb-module.json  wasi_import.wasm  wasi_import.wat
native/vrweb_wasm_runtime/src/: lib.rs
sdk/rust/: Cargo.toml  README.md  build.py
sdk/rust/src/: lib.rs
(+955 files in other folders)
