[package]
name = "vrweb-wasm-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "=0.5.2", default-features = false, features = ["api-4-6"] }
wasmtime = { version = "=46.0.1", default-features = false, features = ["component-model", "cranelift", "runtime", "std", "wat"] }
wat = "=1.253.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
